--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,19 @@ author: elgsylvain85 <mulambasylvain@gmail.com>
 homepage: https://github.com/elgsylvain85/cachedflickvideoplayer.git
 
 environment:
-  sdk: ">=2.7.0 <2.11.0"
+    sdk: '>=2.7.0 <2.11.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-  # video_player: ^0.10.8+1
-  cached_video_player: ^1.0.3
-  provider: ^4.0.5
-  wakelock: ^0.1.4+1
+    flutter:
+        sdk: flutter
+    # video_player: ^0.10.8+1
+    cached_video_player: ^1.0.3
+    provider: ^4.0.5
+    wakelock: ^0.1.4+1
+    screen: ^0.0.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+    flutter_test:
+        sdk: flutter
 
 flutter:
